feat: create app-material.module

--- a/crud-angular/src/app/app.component.html
+++ b/crud-angular/src/app/app.component.html
@@ -1,4 +1,6 @@
 <mat-toolbar color="primary">
-  <span>CRUD Angular + Spring</span>
+  <header class="container">
+    <span>CRUD Angular + Spring</span>
+  </header>
 </mat-toolbar>
 <router-outlet></router-outlet>
