--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,5 +1,10 @@
 <section class="container s-courses">
-  <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+  <table
+    mat-table
+    *ngIf="courses$ | async as courses; else loading"
+    [dataSource]="courses"
+    class="mat-elevation-z8"
+  >
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let course">{{ course.name }}</td>
@@ -14,3 +19,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 </section>
+
+<ng-template #loading>
+  <mat-spinner></mat-spinner>
+</ng-template>
